--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 body {
   margin: 0;
   padding: 0;
+  background-color: #f2f2f2;
 }
 
 .container {
@@ -10,22 +11,31 @@ body {
   justify-content: center;
   height: 100vh;
   text-align: center;
-  background-color: #f2f2f2;
 }
 
 h1 {
   margin-bottom: 20px;
+  color: #333;
 }
 
 input[type="text"] {
   padding: 8px;
   font-size: 16px;
   margin-bottom: 10px;
+  border: none;
+  border-radius: 4px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 button {
   padding: 10px 20px;
   font-size: 16px;
+  background-color: #00cc66;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  cursor: pointer;
 }
 
 .data-container {
@@ -33,28 +43,30 @@ button {
 }
 
 .square {
-  width: 100px;
-  height: 100px;
+  width: 80px;
+  height: 80px;
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-bottom: 10px;
-  font-size: 24px;
+  font-size: 20px;
   color: #fff;
   text-transform: uppercase;
+  background-color: #00cc66;
+  border-radius: 4px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+  margin-bottom: 10px;
 }
 
 .green {
-  background-color: #00ff00;
+  background-color: #00cc66;
 }
 
 .red {
-  background-color: #ff0000;
+  background-color: #ff4d4d;
 }
 
 .normatives-container {
   margin-top: 20px;
-  display: none;
 }
 
 ul {
