--- a/style.css
+++ b/style.css
@@ -40,6 +40,13 @@ button {
 
 .data-container {
   margin-top: 20px;
+  display: none;
+}
+
+.square-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .square {
@@ -47,20 +54,20 @@ button {
   height: 160px;
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
-  justify-content: flex-end;
   font-size: 60px;
   color: #fff;
   background-color: #000;
   border-radius: 20px;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
-  margin-bottom: 20px;
+  margin-right: 20px;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
 
 .label {
-  font-size: 24px;
-  margin-bottom: 10px;
+  font-size: 18px;
+  margin-top: 10px;
 }
 
 .green {
@@ -69,17 +76,4 @@ button {
 
 .red {
   background-color: #ff3b30;
-}
-
-.normatives-container {
-  margin-top: 20px;
-}
-
-ul {
-  list-style-type: none;
-  padding: 0;
-}
-
-.normatives-container ul li {
-  margin-bottom: 10px;
 }
