--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ body {
 .visits-square {
   width: 50px;
   height: 50px;
-  border-radius: 50%;
+  border-radius: 10px;
   margin-right: 10px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
   display: flex;
@@ -80,4 +80,18 @@ body {
 
 .visits-square.red {
   background-color: #ff0000;
+}
+
+button {
+  background-color: #4caf50;
+  color: #ffffff;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 5px;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: #45a049;
 }
